# route4me-cpp-sdk

./: .travis.yml  CMakeLists.txt  README.md  README.rar
benchmarks/: ActivitiesBenchmark.cpp  AddressBookBenchmark.cpp  AvoidanceZonesBenchmark.cpp  CMakeLists.txt  ConfigBenchmark.cpp  GPSBenchmark.cpp  GeocoderBenchmark.cpp  NotesBenchmark.cpp  OptimizationBenchmark.cpp  OrdersBenchmark.cpp  RoutesBenchmark.cpp  SessionBenchmark.cpp  StreetsBenchmark.cpp  TerritoriesBenchmark.cpp  TrackingBenchmark.cpp  UsersBenchmark.cpp
examples/: Activities.cpp  ActivitiesByType.cpp  ActivitiesTest.cpp  AddAddressToOptimization.cpp  AddOrder.cpp  AssetTracking.cpp  AvoidanceZones.cpp  BatchGeocoding.cpp  BulkGeocoding.cpp  CMakeLists.txt  DeleteRoute.cpp  DuplicateRoute.cpp  EditMember.cpp  GetAllStreets.cpp  GetConfig.cpp  GetLocationHistory.cpp  GetMultipleRoutes.cpp  GetOrdersByDate.cpp  GetOrdersQuery.cpp  GetRoute.cpp  GetRouteByDirections.cpp  GetRouteByText.cpp  GetSingleStreet.cpp  GetStreetsLimited.cpp  GetStreetsZipHouse.cpp  GetSubUsers.cpp  GetVehicles.cpp  LogActivities.cpp  Login.cpp  MarkVisited.cpp  MergeRoutes.cpp  MultipleDepotMultipleDriver.cpp  MultipleDepotMultipleDriverTimeWindows.cpp  OptimizeAndReoptimize.cpp  Orders.cpp  ReOptimization.cpp  Register.cpp  RemoveOptimization.cpp  RouteManifest.cpp  SetGPSPosition.cpp  (+15 more)
include/: route4me.h
src/: CMakeLists.txt  route4me.cpp
test/: Activities.cpp  ActivitiesTest.cpp  AddConfig.cpp  AddressBook.cpp  AddressBookTest.cpp  AvoidanceZonesTest.cpp  CMakeLists.txt  ConfigTest.cpp  DeleteMember.cpp  GPSTest.cpp  GeocoderTest.cpp  GetCustomOrders.cpp  GetMultipleRoutes.cpp  GetOptimization.cpp  GetOptimizations.cpp  GetRouteByPoints.cpp  MergeRoutes.cpp  Notes.cpp  NotesTest.cpp  OptimizationTest.cpp  OptimizeAndReoptimize.cpp  OrdersTest.cpp  PreviewFile.cpp  PurchaseLicense.cpp  ReOptimization.cpp  ReverseGeocoding.cpp  RouteDestinations.cpp  RouteStatus.cpp  RoutesTest.cpp  SessionTest.cpp  SetGPSPosition.cpp  ShareRoutes.cpp  SingleDriverRoundTrip.cpp  StreetsTest.cpp  TerritoriesTest.cpp  Territory.cpp  TrackDeviceLastLocationHistory.cpp  TrackingTest.cpp  Users.cpp  UsersTest.cpp  (+7 more)
