CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Setting up project
PROJECT(CPPROUTE4ME)
set (CPPROUTE4ME_VERSION_MAJOR 1)
set (CPPROUTE4ME_VERSION_MINOR 0)

# Checking for dependencies
FIND_PACKAGE(CURL REQUIRED)
FIND_PACKAGE(GTest REQUIRED)

# Set up include pathes
INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${CPPROUTE4ME_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})

# Set up output paths
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)

# Set up source directories
ADD_SUBDIRECTORY(src bin)
ADD_SUBDIRECTORY(examples examples)
ADD_SUBDIRECTORY(test test)
ADD_SUBDIRECTORY(benchmarks benchmarks)
